--- a/bigapp.yaml
+++ b/bigapp.yaml
@@ -4,12 +4,11 @@ metadata:
   name: bigapp
   namespace: argocd
 spec:
-  project: default
+  project: cluster-management
   source:
-    repoURL: https://github.com/ehienabs/civo-kafka.git
+    repoURL: https://github.com/yannicksiewe/argocd-kafka-lab.git
     targetRevision: HEAD
     path: argocd-apps
   destination:
     name: in-cluster
     namespace: default
-  
