--- a/argocd-apps/apk-app.yaml
+++ b/argocd-apps/apk-app.yaml
@@ -11,7 +11,7 @@ spec:
     path: kafka-cluster/strimzi-apk-cluster
   destination:
     name: in-cluster
-    namespace: kafka
+    namespace: default
   syncPolicy:
     automated:
       prune: true
